add remote component

--- a/microfront1/package.json
+++ b/microfront1/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "microfront1",
+  "name": "first",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rescripts/cli": "^0.0.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,9 +18,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "PORT=3001 rescripts  start ",
+    "build": "rescripts  build",
+    "test": "rescripts  test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
